Added mongo database
