# main.py
@@ -5,10 +5,14 @@ This NApp implements Oplenflow multi tables
 # pylint: disable=unused-argument
 import pathlib
 
-from flask import jsonify
+from flask import jsonify, request
+from pydantic import ValidationError
+from werkzeug.exceptions import BadRequest, NotFound
 
 from kytos.core import KytosNApp, log, rest
 from kytos.core.helpers import load_spec, validate_openapi
+
+from .controllers import PipelineController
 
 
 class Main(KytosNApp):
@@ -27,42 +31,105 @@ class Main(KytosNApp):
 
         So, if you have any setup routine, insert it here.
         """
-        log.info("Setup from of_multi_table")
+        self.pipeline_controller = self.get_pipeline_controller()
 
     def execute(self):
         """Execute once when the napp is running."""
         log.info("Executing of_multi_table")
 
+    @staticmethod
+    def get_pipeline_controller():
+        """Get PipelineController"""
+        return PipelineController()
+
     @rest("/v1/pipeline", methods=["POST"])
     @validate_openapi(spec)
     def add_pipeline(self, data):
         """Add pipeline"""
-        return jsonify("Operation successful"), 201
+        log.debug("add_pipeline /v1/pipeline")
+        try:
+            _id = self.pipeline_controller.insert_pipeline(data)
+        except ValidationError as err:
+            msg = self.error_msg(err.errors())
+            log.debug("add_pipeline result %s %s", msg, 400)
+            raise BadRequest(msg) from err
+        msg = f"Pipeline {_id} created"
+        log.debug("add_pipeline result %s %s", _id, 201)
+        return jsonify(msg), 201
 
     @rest("/v1/pipeline", methods=["GET"])
     def list_pipelines(self):
         """List pipelines"""
-        return jsonify("Operation successful"), 201
+        log.debug("list_pipelines /v1/pipeline")
+        args = request.args.to_dict()
+        status = args.get("status", None)
+        pipelines = self.pipeline_controller.get_pipelines(status)
+        log.debug("list_pipelines result %s %s", pipelines, 201)
+        return jsonify(pipelines), 201
 
     @rest("/v1/pipeline/<pipeline_id>", methods=["GET"])
     def get_pipeline(self, pipeline_id):
         """Get pipeline by pipeline_id"""
-        return jsonify("Operation successful"), 201
+        log.debug("get_pipeline /v1/pipeline/%s", pipeline_id)
+        pipeline = self.pipeline_controller.get_pipeline(pipeline_id)
+        if not pipeline:
+            msg = f"pipeline_id {pipeline_id} not found"
+            log.debug("get_pipeline result %s %s", msg, 404)
+            raise NotFound(msg)
+        log.debug("get_pipeline result %s %s", pipeline, 201)
+        return jsonify(pipeline), 201
 
     @rest("/v1/pipeline/<pipeline_id>", methods=["DELETE"])
     def delete_pipeline(self, pipeline_id):
         """Delete pipeline by pipeline_id"""
-        return jsonify("Operation successful"), 201
+        log.debug("delete_pipeline /v1/pipeline/%s", pipeline_id)
+        result = self.pipeline_controller.delete_pipeline(pipeline_id)
+        if result == 0:
+            msg = f"pipeline_id {pipeline_id} not found"
+            log.debug("delete_pipeline result %s %s", msg, 404)
+            raise NotFound(msg)
+        msg = f"Pipeline {pipeline_id} deleted successfully"
+        log.debug("delete_pipeline result %s %s", msg, 201)
+        return jsonify(msg), 201
 
     @rest("/v1/pipeline/<pipeline_id>/enable", methods=["POST"])
     def enable_pipeline(self, pipeline_id):
         """Enable pipeline"""
-        return jsonify("Operation successful"), 201
+        log.debug("enable_pipeline /v1/pipeline/%s/enable", pipeline_id)
+        try:
+            self.pipeline_controller.update_status(pipeline_id, "enabled")
+        except NotFound as err:
+            msg = f"Pipeline {pipeline_id} not found"
+            log.debug("enable_pipeline result %s %s", msg, 404)
+            raise err
+        msg = f"Pipeline {pipeline_id} enabled"
+        log.debug("enable_pipeline result %s %s", msg, 201)
+        return jsonify(msg), 201
 
     @rest("/v1/pipeline/<pipeline_id>/disable", methods=["POST"])
     def disable_pipeline(self, pipeline_id):
         """Disable pipeline"""
-        return jsonify("Operation successful"), 201
+        log.debug("disable_pipeline /v1/pipeline/%s/disable", pipeline_id)
+        try:
+            self.pipeline_controller.update_status(pipeline_id, "disabled")
+        except NotFound as err:
+            msg = f"Pipeline {pipeline_id} not found"
+            log.debug("disable_pipeline result %s %s", msg, 404)
+            raise err
+        msg = f"Pipeline {pipeline_id} disabled"
+        log.debug("disable_pipeline result %s %s", msg, 201)
+        return jsonify(msg), 201
+
+    @staticmethod
+    def error_msg(error_list: list) -> str:
+        """Return a more request friendly error message from ValidationError"""
+        msg = ""
+        for err in error_list:
+            for value in err['loc']:
+                msg += value + ", "
+            msg = msg[:-2]
+            msg += ": " + err["msg"] + "; "
+        return msg[:-2]
 
     def shutdown(self):
         """Run when your NApp is unloaded.
